--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,4 +29,10 @@
         android:layout_height="wrap_content"
         tools:layout="@layout/fragment_main" />
 
+    <Button
+        android:id="@+id/button_record"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/record" />
+
 </LinearLayout>
